Update Favorites empty state

--- a/lib/src/components/containers/lectures_container/favorite_empty_state/favorite_empty_state.html
+++ b/lib/src/components/containers/lectures_container/favorite_empty_state/favorite_empty_state.html
@@ -1,5 +1,5 @@
 <empty-state
-  icon='<path fill="currentColor" fill-rule="evenodd" d="M19.18 9.024c.784.111 1.098 1.058.53 1.6l-3.161 3.017.747 4.262c.135.77-.693 1.345-1.387.987L12 16.878 8.091 18.89c-.694.36-1.522-.217-1.387-.987l.747-4.262-3.16-3.017c-.57-.542-.255-1.489.528-1.6L9.19 8.4l1.953-3.878c.353-.7 1.366-.692 1.716 0L14.811 8.4l4.37.624zm-4.247 3.957l2.934-2.744-4.053-.566L12 6.143 10.186 9.67l-4.053.566 2.934 2.744-.691 3.876L12 15.028l3.624 1.83-.69-3.877z"/>'
-  title="У&nbsp;тебя тут пока ничего нет"
-  message="Жми звезду — создавай свой CodeFest&nbsp;X"
+    icon='<path fill="currentColor" fill-rule="evenodd" d="M19.18 9.024c.784.111 1.098 1.058.53 1.6l-3.161 3.017.747 4.262c.135.77-.693 1.345-1.387.987L12 16.878 8.091 18.89c-.694.36-1.522-.217-1.387-.987l.747-4.262-3.16-3.017c-.57-.542-.255-1.489.528-1.6L9.19 8.4l1.953-3.878c.353-.7 1.366-.692 1.716 0L14.811 8.4l4.37.624zm-4.247 3.957l2.934-2.744-4.053-.566L12 6.143 10.186 9.67l-4.053.566 2.934 2.744-.691 3.876L12 15.028l3.624 1.83-.69-3.877z"/>'
+    title="Nothing yet"
+    message="Add the talks to your favourites and they will appear here"
 ></empty-state>
