--- a/lib/src/components/containers/rating_container/rating_container.html
+++ b/lib/src/components/containers/rating_container/rating_container.html
@@ -1,7 +1,7 @@
 <loader
   [isReady]="isReady">
   <layout
-    [title]="'Рейтинг докладов'"
+    [title]="'Rating'"
     [state]="state">
 
     <div class="events__list"
