--- a/lib/src/components/containers/rating_container/rating_empty_state/rating_empty_state.html
+++ b/lib/src/components/containers/rating_container/rating_empty_state/rating_empty_state.html
@@ -1,1 +1,5 @@
-Голосуй за лучших!
+<empty-state
+  icon='<path fill="currentColor" d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill="currentColor" fill-rule="nonzero" />'
+  title='No one voted yet'
+  message='The rating will be shown here once someone votes'
+></empty-state>
