--- a/lib/src/components/containers/welcome_container/welcome_container.html
+++ b/lib/src/components/containers/welcome_container/welcome_container.html
@@ -8,7 +8,7 @@
       link-button
       (click)="onClose()"
       class="welcome__skip-button">
-      Пропустить
+      Skip
     </button>
 
     <section
