--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -16,7 +16,8 @@
 
   .drawer__header {
     flex-shrink: 0;
-    padding: 20px 32px 32px;
+    padding: 48px 32px 0;
+    text-align: center;
   }
 
   .drawer__body {
