--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -68,7 +68,7 @@
     display: grid;
     grid-row-gap: 24px;
     margin: 0 -24px;
-    padding: 0 8px 24px 24px;
+    padding: 0 8px 8px 24px;
   }
 
   .schedule__header {
@@ -94,6 +94,10 @@
 
   .schedule__events + .schedule__events {
     margin-top: 8px;
+  }
+
+  .schedule__event {
+    min-width: 0;
   }
 
   .schedule__header-date {
@@ -240,7 +244,7 @@
   // event card ---
 
   .event-card {
-    padding: 16px 24px 16px 16px; // todo
+    padding: 16px; // todo
     position: relative; // for actions
     border-radius: 6px; // todo
     background-color: #ffffff; // todo
@@ -273,10 +277,12 @@
   }
 
   .event-card__actions {
-    position: absolute;
-    right: 8px; // todo
-    bottom: 8px; // todo
+    flex-shrink: 0;
+    align-self: flex-end;
     display: flex;
+    margin-left: 8px;
+    margin-bottom: -6px;
+    margin-right: -12px;
   }
 
   .event-card__language {
