--- a/lib/src/styles/common.scss
+++ b/lib/src/styles/common.scss
@@ -39,12 +39,16 @@
       margin: auto;
     }
 
+    .info-item__title {
+      word-wrap: break-word;
+    }
 
     .info-item__subtitle {
       color: $fg-color-secondary;
     }
 
     .info-item__details {
+      flex-grow: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
