--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -10,11 +10,17 @@
   .tags {
     grid-row: pre-content;
     display: flex;
-    flex-wrap: nowrap;
-    padding: 12px 0 12px 24px;
     overflow-x: auto;
     z-index: 0;
     -webkit-overflow-scrolling: touch;
+  }
+
+  .tags__wrapper {
+    flex-shrink: 0;
+    flex-grow: 1;
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 12px 8px 12px 24px;
   }
 
   .tags__item {
