--- a/lib/src/components/containers/lecture_talk/lecture_talk.html
+++ b/lib/src/components/containers/lecture_talk/lecture_talk.html
@@ -1,4 +1,7 @@
-<talks-zero-state *ngIf="posts.length == 0"></talks-zero-state>
+<talks-zero-state
+  *ngIf="posts.length == 0">
+</talks-zero-state>
+
 <talk-post
   *ngFor="let post of posts"
   (onDelete)="onPostDelete($event)"
