--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.html
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.html
@@ -1,4 +1,3 @@
-
 <div
   *ngIf="!canCreatePost"
   class="message-login__container">
@@ -18,7 +17,7 @@
   <input
     #input
     [(ngModel)]="newPostText"
-    placeholder="Напишите что-нибудь..."
+    placeholder="Write something..."
     class="message-send__input">
 
   <button
