add language filter

--- a/lib/src/components/containers/lecture_talk/empty_state/talks_zero_state.html
+++ b/lib/src/components/containers/lecture_talk/empty_state/talks_zero_state.html
@@ -1,5 +1,5 @@
 <empty-state
-  icon='<path fill="currentColor" fill-rule="evenodd" d="M19.18 9.024c.784.111 1.098 1.058.53 1.6l-3.161 3.017.747 4.262c.135.77-.693 1.345-1.387.987L12 16.878 8.091 18.89c-.694.36-1.522-.217-1.387-.987l.747-4.262-3.16-3.017c-.57-.542-.255-1.489.528-1.6L9.19 8.4l1.953-3.878c.353-.7 1.366-.692 1.716 0L14.811 8.4l4.37.624zm-4.247 3.957l2.934-2.744-4.053-.566L12 6.143 10.186 9.67l-4.053.566 2.934 2.744-.691 3.876L12 15.028l3.624 1.83-.69-3.877z"/>'
+  icon='<path fill="currentColor" fill-rule="evenodd" d="M8.816 11.2a.8.8 0 1 0 0 1.599.8.8 0 0 0 0-1.6zm3.195 0a.8.8 0 1 0 .001 1.599.8.8 0 0 0 0-1.6zm3.196 0a.8.8 0 1 0 0 1.599.8.8 0 0 0 0-1.6zM12.01 4C7.6 4 4.023 7.582 4.023 12a7.918 7.918 0 0 0 1.805 5.063l-1.598 1.6a.8.8 0 0 0-.168.872.799.799 0 0 0 .76.464h7.19C16.422 20 20 16.418 20 12 20 7.583 16.423 4 12.011 4zm0 14.4H6.747l.743-.745a.8.8 0 0 0 .24-.568.8.8 0 0 0-.24-.56 6.406 6.406 0 0 1-.8-8.08 6.386 6.386 0 0 1 7.758-2.362A6.402 6.402 0 0 1 12.011 18.4z"/>'
   title="Anything to say?"
   message="Ask questions, leave your comments or give a big round of applause to your favorite speaker"
 ></empty-state>
