--- a/lib/src/components/containers/sections_container/sections_container.html
+++ b/lib/src/components/containers/sections_container/sections_container.html
@@ -18,7 +18,7 @@
         <path fill="currentColor" fill-rule="evenodd" d="M13.233 12l5.508-5.501A.878.878 0 0 0 17.5 5.257l-5.5 5.51-5.5-5.51A.878.878 0 1 0 5.26 6.5l5.508 5.5-5.508 5.5a.875.875 0 0 0 0 1.242.874.874 0 0 0 1.241 0l5.5-5.509 5.5 5.51a.874.874 0 0 0 1.241 0 .875.875 0 0 0 0-1.242L13.233 12z"/>
       </svg>
 
-      <span class="visually-hidden">Отменить</span>
+      <span class="visually-hidden">Cancel</span>
     </button>
   </div>
 
@@ -32,6 +32,7 @@
       [mainSections]="mainSections"
       [isCustomSectionMode]="isCustomSectionMode"
       [selectedSectionIds]="selectedSectionIds"
+      [selectedLanguages]="selectedLanguages"
       (onChange)="onSectionsChange($event)"
       (onShowApply)="onShowApply($event)">
     </sections>
