--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.scss
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.scss
@@ -21,6 +21,7 @@
     width: 100%;
     position: relative;
     box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
   }
 
   .message-send__button {
