Fix zero state position

--- a/lib/src/components/containers/lecture_container/lecture_container.html
+++ b/lib/src/components/containers/lecture_container/lecture_container.html
@@ -57,7 +57,8 @@
 
       <tabs
         role="tablist"
-        aria-orientation="horizontal">
+        aria-orientation="horizontal"
+        style="flex-shrink: 0;">
 
         <button
           role="tab"
