--- a/lib/src/components/containers/lecture_info/lecture_info.scss
+++ b/lib/src/components/containers/lecture_info/lecture_info.scss
@@ -71,4 +71,8 @@
 
   // related events ---
   // --- end related events
+
+  .info-item__media-container {
+    border-color: #f2f3fa !important;
+  }
 }
