--- a/lib/src/components/containers/lecture_info/lecture_info.html
+++ b/lib/src/components/containers/lecture_info/lecture_info.html
@@ -165,8 +165,7 @@
                     <path d="M15.4 7H20l-7.08 7.06-2.3-2.29L15.41 7zm-6.8 4.04l3.67 3.67L9.97 17 4 11.04h4.6z" fill-rule="evenodd"/>
                 </svg>
 
-<!--                <span aria-hidden="true">Уже проголосовали</span>-->
-                <span class="visually-hidden">You voted</span>
+                You voted
             </ng-container>
         </button>
 
