show generated user name

--- a/lib/src/components/ui/talk_post_input/talk_post_input_component.html
+++ b/lib/src/components/ui/talk_post_input/talk_post_input_component.html
@@ -11,6 +11,11 @@
 </div>
 
 <div
+  class="message-login__container">
+  You are <b>{{ userName }}</b>
+</div>
+
+<div
   *ngIf="canCreatePost"
   class="message-send__container">
 
