--- a/lib/src/components/containers/lecture_info/lecture_info.html
+++ b/lib/src/components/containers/lecture_info/lecture_info.html
@@ -66,7 +66,7 @@
 
                         <ng-container
                                 *ngFor="let speaker of lecture.speakers">
-                            {{ speaker.name }}
+                            <div>{{ speaker.name }}</div>
                         </ng-container>
                     </div>
 
@@ -76,7 +76,7 @@
 
                         <ng-container
                                 *ngFor="let speaker of lecture.speakers">
-                            {{ speaker.company }}
+                            <div>{{ speaker.company }}</div>
                         </ng-container>
                     </div>
                 </div>
