Fix placement of lecture items

--- a/lib/src/components/containers/lecture_info/lecture_info.html
+++ b/lib/src/components/containers/lecture_info/lecture_info.html
@@ -111,8 +111,10 @@
                     <div
                             class="info-item__title">
                         {{ startTime }} -   {{ endTime }}
-                        <br />
-                        <small>{{ date }}</small>
+                    </div>
+                    <div
+                      class="info-item__subtitle">
+                        {{ date }}
                     </div>
                 </div>
             </div>
