--- a/lib/src/components/containers/lecture_info/lecture_info.scss
+++ b/lib/src/components/containers/lecture_info/lecture_info.scss
@@ -16,6 +16,7 @@
   .event__info {
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
     margin-top: 24px;
   }
 
