Add bottom gap to disable vote text

--- a/lib/src/components/containers/lecture_info/lecture_info.scss
+++ b/lib/src/components/containers/lecture_info/lecture_info.scss
@@ -57,6 +57,7 @@
   .event__vote-disabled-info {
     text-align: center;
     color: $fg-color-secondary;
+    margin-bottom: 24px;
   }
 
   .event__related {
