update filter button logic

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -53,7 +53,7 @@
           <!-- all -->
           <button
             cf-button
-            (click)="onShowAllClick()"
+            (click)="filtersCount > 0 && isAllSelected ? onFilter() : onShowAllClick()"
             class="button-tag">
 
             <span
