Update filter icon

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -39,9 +39,8 @@
 
             <svg
               aria-hidden="true"
-              xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="24" height="24" viewBox="0 0 24 24"
-              class="button-icon">
-              <path d="M5 6h14a1 1 0 0 1 0 2H5a1 1 0 1 1 0-2zm3 5h8a1 1 0 0 1 0 2H8a1 1 0 0 1 0-2zm3 5h2a1 1 0 0 1 0 2h-2a1 1 0 0 1 0-2z" fill-rule="evenodd"/>
+              width="16" height="14" xmlns="http://www.w3.org/2000/svg" fill="currentColor">
+              <path d="M8.17 10a3 3 0 0 1 5.66 0H15a1 1 0 0 1 0 2h-1.17a3 3 0 0 1-5.66 0H1a1 1 0 0 1 0-2h7.17zm-6-8a3 3 0 0 1 5.66 0H15a1 1 0 0 1 0 2H7.83a3 3 0 0 1-5.66 0H1a1 1 0 1 1 0-2h1.17zM5 2a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm6 10a1 1 0 1 0 0-2 1 1 0 0 0 0 2z" fill-rule="evenodd"/>
             </svg>
 
             <span
