--- a/lib/src/components/containers/lectures_container/actions/actions.html
+++ b/lib/src/components/containers/lectures_container/actions/actions.html
@@ -1,5 +1,6 @@
 <popularity-icon
-  [popularity]="popularity">
+  [popularity]="popularity"
+  [maxPopularity]="maxPopularity">
 </popularity-icon>
 
 <button
