--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -283,6 +283,7 @@
 
                             <actions
                               [popularity]="lecture.favoritesCount"
+                              [maxPopularity]="maxPopularity"
                               [isFavorite]="isFavoriteLecture(lecture)"
                               (onFavoriteChange)="onFavoriteChange(lecture, $event)">
                             </actions>
