localization for empty states

--- a/lib/src/components/containers/lecture_talk/empty_state/talks_zero_state.html
+++ b/lib/src/components/containers/lecture_talk/empty_state/talks_zero_state.html
@@ -1,5 +1,5 @@
 <empty-state
   icon='<path fill="currentColor" fill-rule="evenodd" d="M8.816 11.2a.8.8 0 1 0 0 1.599.8.8 0 0 0 0-1.6zm3.195 0a.8.8 0 1 0 .001 1.599.8.8 0 0 0 0-1.6zm3.196 0a.8.8 0 1 0 0 1.599.8.8 0 0 0 0-1.6zM12.01 4C7.6 4 4.023 7.582 4.023 12a7.918 7.918 0 0 0 1.805 5.063l-1.598 1.6a.8.8 0 0 0-.168.872.799.799 0 0 0 .76.464h7.19C16.422 20 20 16.418 20 12 20 7.583 16.423 4 12.011 4zm0 14.4H6.747l.743-.745a.8.8 0 0 0 .24-.568.8.8 0 0 0-.24-.56 6.406 6.406 0 0 1-.8-8.08 6.386 6.386 0 0 1 7.758-2.362A6.402 6.402 0 0 1 12.011 18.4z"/>'
-  title="Anything to say?"
-  message="Ask questions, leave your comments or give a big round of applause to your favorite speaker"
-></empty-state>
+  [title]='title'
+  [message]='message'>
+</empty-state>
