--- a/lib/src/components/ui/empty_state/empty_state.html
+++ b/lib/src/components/ui/empty_state/empty_state.html
@@ -4,7 +4,14 @@
   [innerHTML]="safeIcon">
 </svg>
 
-<h2 class="zero-state__title" [innerHTML]="title"></h2>
-<p class="zero-state__description" [innerHTML]="message"></p>
+<h2
+  class="zero-state__title"
+  [innerHTML]="title">
+</h2>
+
+<p
+  class="zero-state__description"
+  [innerHTML]="message">
+</p>
 
 <ng-content></ng-content>
