add intl for menu

--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -2,7 +2,7 @@
   [isReady]="isReady">
 
   <layout
-    [title]="'Schedule'"
+    [title]="title"
     [isScroll]="true"
     [state]="state"
     [titleHidden]="isSearchMode"
