--- a/lib/src/components/containers/rating_container/rating_container.html
+++ b/lib/src/components/containers/rating_container/rating_container.html
@@ -1,7 +1,7 @@
 <loader
   [isReady]="isReady">
   <layout
-    [title]="'Rating'"
+    [title]="title"
     [state]="state">
 
     <div class="events__list"
@@ -33,7 +33,7 @@
             class="event__meta-item">
             {{ lecture.location.title }}
           </span>
-          
+
           &ngsp;•&ngsp;
 
           <!-- Section -->
