--- a/lib/src/components/drawer/drawer.html
+++ b/lib/src/components/drawer/drawer.html
@@ -89,17 +89,6 @@
       </ul>
     </nav>
 
-    <div>
-      <div>
-        Язык:
-      </div>
-      <button
-        (click)="changeLanguage()"
-        class="user__logout-button">
-        {{ language }}
-      </button>
-    </div>
-
     <div
       *ngIf="false && isAuthorized"
       class="user">
@@ -131,6 +120,15 @@
         </button>
       </div>
     </div>
+  </div>
+
+  <div
+    class="drawer__language-switcher">
+    <button
+      (click)="changeLanguage()"
+      class="user__logout-button">
+      {{ language }}
+    </button>
   </div>
 
   <footer
