--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -1,85 +1,87 @@
 <div
   class="about__logos"
   aria-hidden="true">
-	<img
+  <img
     src="/assets/images/about/codefest.png"
     width="34"
-    height="48" />
-	<svg
+    height="48">
+  <svg
     class="cross"
     viewBox="0 0 25 25"
     width="25"
     height="25">
-		<path d="M 2,2 L 23,23 M 23,2 L 2,23" stroke="#999" />
-	</svg>
-	<img
+    <path d="M 2,2 L 23,23 M 23,2 L 2,23" stroke="#999"/>
+  </svg>
+  <img
     src="/assets/images/about/wrike.png"
     width="73"
-    height="48" />
+    height="48">
 </div>
 
 <p
   class="about__description">
-	Wrike и&nbsp;CodeFest&nbsp;X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию,
-	давай сделаем лучше? Приходи на&nbsp;стенд Wrike — поработай в&nbsp;гараже
+  Wrike и&nbsp;CodeFest&nbsp;X объединились, чтобы помочь тебе настроить своё расписание. Сейчас ты видишь MVP версию,
+  давай сделаем лучше? Приходи на&nbsp;стенд Wrike — поработай в&nbsp;гараже
 </p>
 
 <ul
-	class="about__options">
-	<li
+  class="about__options">
+  <li
     class="about__options-item">
 
-		<svg
+    <svg
       aria-hidden="true"
       xmlns="http://www.w3.org/2000/svg"
       width="37" height="40" viewBox="0 -3 37 40">
-			<g fill="none" fill-rule="evenodd">
-				<path stroke="#FCDE98" d="M1 11h24v24H1z"/>
-				<path fill="#FCDE98" d="M13 0h24v24H13z"/>
-			</g>
+      <g fill="none" fill-rule="evenodd">
+        <path stroke="#FCDE98" d="M1 11h24v24H1z"/>
+        <path fill="#FCDE98" d="M13 0h24v24H13z"/>
+      </g>
     </svg>
 
-		<div
+    <div
       class="about__options-item-text">
       Запили фичу, которой тебе не&nbsp;хватает
     </div>
-	</li>
-	<li
+  </li>
+  <li
     class="about__options-item">
 
-		<svg
+    <svg
       aria-hidden="true"
       xmlns="http://www.w3.org/2000/svg"
       width="35" height="40" viewBox="0 -4 35 40">
-			<g fill="none" fill-rule="evenodd">
-				<path stroke="#BCB2FA" d="M17 0l16 35H1z"/>
-				<path fill="#A698FC" d="M1 35V7.762l34 14.514z" opacity=".7"/>
+      <g fill="none" fill-rule="evenodd">
+        <path stroke="#BCB2FA" d="M17 0l16 35H1z"/>
+        <path fill="#A698FC" d="M1 35V7.762l34 14.514z" opacity=".7"/>
       </g>
-		</svg>
+    </svg>
 
-		<div
+    <div
       class="about__options-item-text">
 
       Пофикси багу, которая тебя раздражает
 
     </div>
-	</li>
-	<li
+  </li>
+  <li
     class="about__options-item">
 
-		<svg
-			aria-hidden="true"
-			xmlns="http://www.w3.org/2000/svg"
-			width="46" height="35" viewBox="0 0 46 35"
-			style="transform: translateY(4px);">
-			<g fill="none" fill-rule="evenodd" transform="translate(0 -5)">
-				<circle cx="12" cy="28" r="12" fill="#5E99FF" opacity=".45"/>
-				<circle cx="29" cy="22" r="17" fill="#5EFFAE" opacity=".7"/></g>
-		</svg>
+    <svg
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg"
+      width="46" height="35" viewBox="0 0 46 35"
+      style="transform: translateY(4px);">
+      <g fill="none" fill-rule="evenodd" transform="translate(0 -5)">
+        <circle cx="12" cy="28" r="12" fill="#5E99FF" opacity=".45"/>
+        <circle cx="29" cy="22" r="17" fill="#5EFFAE" opacity=".7"/>
+      </g>
+    </svg>
 
-		<div
-      class="about__options-item-text">Поделись своими безумными идеями с&nbsp;нами</div>
-	</li>
+    <div
+      class="about__options-item-text">Поделись своими безумными идеями с&nbsp;нами
+    </div>
+  </li>
 </ul>
 
 <p class="about__alt">
@@ -90,5 +92,5 @@
 </p>
 
 <p class="about__github">
-	<a href="https://github.com/wrike/codefestx" target="_blank">https://github.com/wrike/codefestx</a>
+  <a href="https://github.com/wrike/codefestx" target="_blank">https://github.com/wrike/codefestx</a>
 </p>
