--- a/lib/src/components/drawer/drawer.scss
+++ b/lib/src/components/drawer/drawer.scss
@@ -23,24 +23,42 @@
     text-align: center;
   }
 
-  .drawer__body {
+  .drawer__content {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
+  }
+
+  .drawer__nav {
+    margin-top: 32px;
   }
 
   .drawer__footer {
     flex-shrink: 0;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 20px 16px;
+    padding: 16px;
     color: $fg-color-secondary;
   }
 
-  .drawer__footer-icon {
-    margin-right: 4px;
+  .drawer__switch-language {
+    @include button-reset;
+    color: $link-color;
+    @include font-main;
+    cursor: pointer;
+  }
+
+  .drawer__credits {
+    margin-top: 8px;
+  }
+
+  .drawer__credits-icon {
+    margin: -4px 4px 0 0;
+    vertical-align: middle;
   }
 
   ::ng-deep {
@@ -59,7 +77,7 @@
 
   // nav ---
 
-  .nav {
+  .nav__list {
     padding: 0;
     margin: 0;
     list-style: none;
