Add background to drawer

--- a/lib/src/components/drawer/drawer.html
+++ b/lib/src/components/drawer/drawer.html
@@ -5,7 +5,7 @@
   class="drawer">
 
   <div
-    class="drawer__content">
+    class="drawer__body">
 
     <img
       src="/assets/images/logo.png"
