--- a/web/assets/styles/variables.scss
+++ b/web/assets/styles/variables.scss
@@ -5,6 +5,9 @@ $fg-color-secondary: #898a92;
 $link-color: #33a7d8;
 $bg-color-icon: #e6f4fa;
 
+$dartup-color-primary: #05d2b5;
+$dartup-color-secondary: #0296e0;
+
 // Utility
 $border-radius: 8px;
 
