--- a/lib/src/components/ui/tabs/tabs.scss
+++ b/lib/src/components/ui/tabs/tabs.scss
@@ -31,7 +31,7 @@
         width: 4px;
         height: 4px;
         border-radius: 50%;
-        background: $link-color; // todo
+        background: $dartup-color-primary; // todo
         position: absolute;
         bottom: -4px;
         margin-left: auto;
