Remove popularity icon from event card, change language position

--- a/lib/src/components/containers/lectures_container/actions/actions.html
+++ b/lib/src/components/containers/lectures_container/actions/actions.html
@@ -1,7 +1,7 @@
-<popularity-icon
-  [popularity]="popularity"
-  [maxPopularity]="maxPopularity">
-</popularity-icon>
+<!--<popularity-icon-->
+<!--  [popularity]="popularity"-->
+<!--  [maxPopularity]="maxPopularity">-->
+<!--</popularity-icon>-->
 
 <button
   cf-button
