--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -13,6 +13,7 @@
     overflow-x: auto;
     z-index: 0;
     -webkit-overflow-scrolling: touch;
+    margin: 0 -24px 0 -8px;
   }
 
   .tags__wrapper {
@@ -20,7 +21,7 @@
     flex-grow: 1;
     display: flex;
     flex-wrap: nowrap;
-    padding: 12px 8px 12px 24px;
+    padding: 12px 8px 12px 0;
   }
 
   .tags__item {
